--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MickyWoo.github.io/React-Project2",
+  "homepage": "https://MickyWoo.github.io/project2",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
